--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.2",
-    "smooth-scroll": "^16.1.3"
+    "react-scripts": "^5.0.1",
+    "smooth-scroll": "^16.1.3",
+    "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
